--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-5">
   <div class="container container-fluid">
     <a class="navbar-brand" href="/vacancies/all">
-      <img class="navbar-brand" src="/assets/onebitjobs.png" class="img-fluid" alt="Onebitjobs logo" height="45">
+      <img class="navbar-brand" src="/assets/onebitjobs.png" class="img-fluid" alt="Curso Emprego logo" height="45">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
